k8s/samplesite/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplesite
  labels:
    app: samplesite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samplesite
  template:
    metadata:
      labels:
        app: samplesite
    spec:
      containers:
      - name: samplesite
        image: registry:5000/samplesite:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 65532
      #   runAsGroup: 65532
